added db schema creation in start command

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "drizzle-kit push && node dist/index.js",
     "db:push": "drizzle-kit push"
   },
   "keywords": [],
